# treecopy

./: .gitignore  LICENSE  README.md  pyproject.toml  treecopy.py
src/treecopy/: __init__.py  cli.py
